# NOTgraphVIZ

./: CMakeLists.txt  GenerateGraphDialog.cpp  GenerateGraphDialog.h  GenerateNetworkDialog.cpp  GenerateNetworkDialog.h  README.md  TableViz.cpp  TableViz.h  app.qrc  main.cpp  mainwindow.cpp  mainwindow.h  settings.h
AbstractClasses/: AdjencyList.cpp  AdjencyList.h  AdjencyMatrix.cpp  AdjencyMatrix.h  Graph.cpp  Graph.h  Node.cpp  Node.h  edge.cpp  edge.h
GraphicClasses/: GraphEdge.cpp  GraphEdge.h  GraphNode.cpp  GraphNode.h  GraphScene.cpp  GraphScene.h  GraphView.cpp  GraphView.h
